--- a/SFAXSwap-FrontEnd/package.json
+++ b/SFAXSwap-FrontEnd/package.json
@@ -4,15 +4,9 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
-    "@ethersproject/address": "^5.0.0-beta",
-    "@ethersproject/contracts": "^5.0.0-beta",
     "@ethersproject/experimental": "^5.0.1",
-    "@ethersproject/networks": "^5.0.0-beta",
-    "@ethersproject/providers": "^5.0.0-beta",
-    "@ethersproject/solidity": "^5.0.0-beta",
     "@overage69/pancake-sdk-v2": "^3.0.0",
     "@pancakeswap-libs/sdk": "1.0.1",
     "@popperjs/core": "^2.4.4",
@@ -41,16 +35,12 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.1",
     "@web3-react/walletlink-connector": "^6.0.9",
-    "abort-controller": "^3.0.0",
-    "abstract-leveldown": "^7.0.0",
     "ajv": "^6.12.3",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.0.7",
-    "google-protobuf": "^3.2.0",
-    "graphql": "14.x || 15.x",
     "graphql-request": "^3.4.0",
-    "i18next": "^17.0.0",
+    "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
     "inter-ui": "^3.13.1",
@@ -60,14 +50,12 @@
     "msw": "^0.31.0",
     "multicodec": "^2.0.0",
     "multihashes": "^3.0.1",
-    "node-fetch": "^2.6.1",
     "polished": "^3.3.2",
-    "react": "^16.8.0",
+    "react": "^17.0.1",
     "react-device-detect": "^1.6.2",
-    "react-dom": "^16.8.0",
+    "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
     "react-i18next": "^10.7.0",
-    "react-is": ">= 16.8.0",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.0",
@@ -77,11 +65,9 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "rebass": "^4.0.7",
-    "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.2.1",
-    "subscriptions-transport-ws": "^0.9.0",
-    "typescript": "^4.3.x"
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
