updated routing package.

--- a/SFAXSwap-FrontEnd/package.json
+++ b/SFAXSwap-FrontEnd/package.json
@@ -7,7 +7,7 @@
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
-    "@overage69/pancake-sdk-v2": "^3.0.0",
+    "apeswap-sdk": "^3.0.0",
     "@pancakeswap-libs/sdk": "1.0.1",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
@@ -36,6 +36,7 @@
     "@web3-react/walletconnect-connector": "^6.1.1",
     "@web3-react/walletlink-connector": "^6.0.9",
     "ajv": "^6.12.3",
+    "apeswap-sdk": "^1.0.4",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.0.7",
