set v2 library package back to overage69 and have verified router contract deployed and using that this time. also updated some colors. we will see how they look.

--- a/SFAXSwap-FrontEnd/package.json
+++ b/SFAXSwap-FrontEnd/package.json
@@ -7,7 +7,7 @@
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
-    "apeswap-sdk": "^3.0.0",
+    "@overage69/pancake-sdk-v2": "^3.0.0",
     "@pancakeswap-libs/sdk": "1.0.1",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
@@ -36,7 +36,6 @@
     "@web3-react/walletconnect-connector": "^6.1.1",
     "@web3-react/walletlink-connector": "^6.0.9",
     "ajv": "^6.12.3",
-    "apeswap-sdk": "^1.0.4",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.0.7",
@@ -46,6 +45,7 @@
     "i18next-xhr-backend": "^2.0.1",
     "inter-ui": "^3.13.1",
     "jazzicon": "^1.5.0",
+    "jest": "^27.0.6",
     "js-cookie": "^2.2.1",
     "lodash.flatmap": "^4.5.0",
     "msw": "^0.31.0",
@@ -74,7 +74,7 @@
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.24",
     "@types/react-transition-group": "^4.4.2",
     "@types/testing-library__cypress": "^5.0.8",
     "cypress": "^4.11.0",
