--- a/SFAXSwap-FrontEnd/package.json
+++ b/SFAXSwap-FrontEnd/package.json
@@ -4,9 +4,15 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.4.0-0",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
+    "@ethersproject/address": "^5.0.0",
+    "@ethersproject/contracts": "^5.0.0",
     "@ethersproject/experimental": "^5.0.1",
+    "@ethersproject/networks": "^5.0.0",
+    "@ethersproject/providers": "^5.0.0",
+    "@ethersproject/solidity": "^5.0.0",
     "@overage69/pancake-sdk-v2": "^3.0.0",
     "@pancakeswap-libs/sdk": "1.0.1",
     "@popperjs/core": "^2.4.4",
@@ -19,7 +25,7 @@
     "@types/multicodec": "^1.0.0",
     "@types/node": "^14.14.16",
     "@types/qs": "^6.9.5",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.14",
     "@types/react-router-dom": "^5.1.6",
@@ -35,28 +41,33 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.1",
     "@web3-react/walletlink-connector": "^6.0.9",
+    "abort-controller": "^3.0.0",
+    "abstract-leveldown": "^7.0.0",
     "ajv": "^6.12.3",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.0.7",
+    "google-protobuf": "^3.2.0",
+    "graphql": "14.x",
     "graphql-request": "^3.4.0",
-    "i18next": "^15.0.9",
+    "i18next": ">= 17.0.0",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
     "inter-ui": "^3.13.1",
     "jazzicon": "^1.5.0",
-    "jest": "^27.0.6",
     "js-cookie": "^2.2.1",
     "lodash.flatmap": "^4.5.0",
     "msw": "^0.31.0",
     "multicodec": "^2.0.0",
     "multihashes": "^3.0.1",
+    "node-fetch": "^2.6.1",
     "polished": "^3.3.2",
-    "react": "^17.0.2",
+    "react": "^16.8.6",
     "react-device-detect": "^1.6.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.8.0",
     "react-feather": "^2.0.8",
     "react-i18next": "^10.7.0",
+    "react-is": ">= 16.8.0",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.0",
@@ -68,13 +79,14 @@
     "rebass": "^4.0.7",
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.2.1",
+    "subscriptions-transport-ws": "^0.9.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^26.0.20",
     "@types/react-transition-group": "^4.4.2",
     "@types/testing-library__cypress": "^5.0.8",
     "cypress": "^4.11.0",
