--- a/SFAXSwap-FrontEnd/.env.development
+++ b/SFAXSwap-FrontEnd/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_NETWORK_URL="https://data-seed-prebsc-1-s1.binance.org:8545"
 REACT_APP_CHAIN_ID="97"
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_GTAG="GTM-K7HW2JM"
