--- a/SFAXSwap-FrontEnd/.env.test
+++ b/SFAXSwap-FrontEnd/.env.test
@@ -1,3 +1,4 @@
 REACT_APP_NETWORK_URL="https://bsc-dataseed1.defibit.io"
 REACT_APP_CHAIN_ID="56"
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_GTAG="GTM-K7HW2JM"
